compiler/tests/success/otbn/intrinsic_or.jazz
export
fn or(reg u32 arg0 arg1) {
    reg u32 x;
    x = #OR(arg0, arg1);
    [x] = x;
}
