compiler/tests/fail/arm-m4/intrinsic_ldrsbS.jazz
export
fn ldrsb(reg u32 arg) -> reg u32 {
    reg u32 x;

    ?{}, x = #LDRSBS((u8)[arg]);

    reg u32 res;
    res = x;
    return res;
}
